--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,12 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  color: rgb(147, 173, 24);
+}
+
+.main-logo-image{
+  width: 200px;
 }
 
 .container {
@@ -17,6 +23,22 @@ h2 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: rgb(147, 173, 24);
+}
+
+.container a{
+  width: 15%;
+  height: 30px;
+  border: solid 2px;
+  border-radius: 99999px;
+  border-color: rgb(110, 132, 21);
+  background-color: rgb(147, 173, 24);
+  color: #FFFF;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
 }
 
 label {
@@ -37,6 +59,13 @@ label:not([class^="Mui"]) {
   display: block;
   margin: 0 auto;
   margin-top: 10px;
+  width: 45%;
+  height: 30px;
+  border: solid 2px;
+  border-radius: 99999px;
+  border-color: rgb(110, 132, 21);
+  background-color: rgb(147, 173, 24);
+  color: #FFFF;
 }
 
 .MuiFormControl-root {
