--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ label:not([class^="Mui"]) {
   background-color: #f9f9f9;
 }
 
-.modal{
+.modal .content{
   height: 150px;
   display: flex;
   justify-content: center;
